# lidenal85-blip

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
deployment/: __init__.py
deployment/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.dev
deployment/nginx/: nginx.conf
deployment/scripts/: backup.sh  deploy.sh  healthcheck.sh
deployment/systemd/: survey-finder.service
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md
scripts/: system_snapshot.sh  validate.sh
src/survey_finder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_a17_runtime_safety.py  test_a18_observability.py  test_a19_hardening.py  test_adapters.py  test_circuit_breaker.py  test_contracts.py  test_core.py  test_execution_controller.py  test_filter.py  test_health.py  test_integration.py  test_metrics.py  test_pipeline.py  test_rate_limiter.py
tests/adapters/: test_adapters.py  test_cloudresearch_sync.py  test_prolific.py  test_prolific_sync.py  test_registry.py  test_respondent.py  test_respondent_sync.py  test_service.py
tests/buffer/: test_buffer.py
tests/contracts/: test_contract_lockdown.py
tests/delivery/: test_delivery.py  test_dispatcher.py
tests/dlq/: test_dlq.py
tests/domain/: test_filter.py  test_normalizer.py
tests/execution/: test_buffer.py  test_cycle.py  test_idempotency.py
tests/failure/: test_leader_loss_mid_cycle.py  test_no_dual_execution.py  test_split_brain.py
(+96 files in other folders)
