[project]
name = "survey-finder"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "redis>=5.0.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
[tool.pytest.ini_options]
testpaths = ["tests"]
